--- a/02_hw_data_wrangling.Rmd
+++ b/02_hw_data_wrangling.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Problem Set 2: Data Wrangling"
-author: Your Name Here
+author: Karis Gilbert
 output: pdf_document
 ---
 
@@ -45,6 +45,23 @@ Use `dplyr` functions to create a table with the number of candidates in each ty
 
 ## Answer 1
 
+```{r}
+library(readr)
+library(dplyr)
+library(knitr)
+
+fb_ads <- read.csv("data/fb_ads.csv")
+glimpse(fb_ads)
+```
+There are 7,014 candidates in the data set. 
+
+```{r}
+incumbency_table <- fb_ads |>
+  group_by(incumbency) |>            
+  summarize(num_candidates = cand_name_last)               
+
+knitr::kable(incumbency_table, caption = "Number of Candidates by Incumbency Status")
+```
 
 
 \newpage
@@ -65,7 +82,22 @@ In the writeup, describe which type of candidate sponsored the most promoting ad
 
 ## Answer 2
 
+```{r}
+library(dplyr)
+filtered_data <-fb_ads |>
+  filter(office %in% c("US House", "US Senate"))
 
+party_incumbent_promote <- filtered_data |>
+  group_by(party, incumbency) |>
+  summarize(promote_prop = mean(ad_tone_promote, na.rm = TRUE)) |>
+  arrange(party, incumbency)
+
+knitr::kable(party_incumbent_promote,
+             digits = 3, 
+             col.names = c("Party", "Incumbency Status", "Promote Proportion"),
+             caption = "Average Promote Proportion by Party and Incumbency")
+```
+The candidate with the highest average is an Incumbent Democrat with an average promote proportion of 0.854. 
 
 \newpage
 
@@ -79,8 +111,25 @@ Create a histogram of this variable for just the US House races. Save the ggplot
  **Rubric:** 2pt for creating the new variable (autograder); 3pts for creating the histogram object (autograder); 2pts for answering the question about the histogram (PDF)
 
 ## Answer 3
+``` {r}
+library(dplyr)
+library(ggplot2)
 
+fb_ads <- fb_ads |>
+  mutate(impressions_millions = impressions / 1e6)
 
+us_house_data <- fb_ads |> 
+  filter(office == "US House")
+
+plot_q3 <- ggplot(us_house_data, aes(x = impressions_millions)) + 
+  geom_histogram() + 
+  labs(title = "Histogram of Facebook Ad Impressions (millions) for US House Races",
+       x = "Impressions (millions)",
+       y = "Count")
+
+plot_q3
+```
+The histogram is skewed to the right, meaning that the majority of Candidates had fewer than 10 million impressions. 
 
 \newpage
 
@@ -102,7 +151,29 @@ You do not need to exactly match the labels, but you should have informative lab
  **Rubric:** 3pts for correct axes (autograder); 3pts for correct data fed into `ggplot` (autograder); 3pts for the correct ordering of the y-axis (PDF); 3pts for fill being mapped to `party` (autograder); 1pt for plot being in knitted output and having informative labels (PDF)
 
 ## Answer 4
+```{r}
+## Filter data for US House candidates 
+us_house_data <- fb_ads |>
+  filter(office == "US House") |>
+  arrange(desc(impressions_millions)) |>
+  slice_head(n = 15) |> 
+  mutate(cand_name_last = factor(cand_name_last,
+                                 levels = cand_name_last[order(impressions_millions)]))
 
+## Barplot 
+fb_top_plot <- ggplot(us_house_data,
+                      aes(x = impressions_millions, 
+                          y = cand_name_last,
+                          fill = party)) + 
+  geom_bar(stat = "identity") + 
+  labs(title = "Top 15 US House Candidates by Facebook Ad Impressions",
+       x = "Facebook Ad Impressions (millions)",
+       y = "Candidate Last Name") + 
+  scale_fill_manual(values = c("R" = "red", "D" = "blue"))
+
+fb_top_plot
+
+```
 
 
 \newpage
