--- a/02_hw_data_wrangling.Rmd
+++ b/02_hw_data_wrangling.Rmd
@@ -51,16 +51,18 @@ library(dplyr)
 library(knitr)
 
 fb_ads <- read.csv("data/fb_ads.csv")
-glimpse(fb_ads)
 ```
 There are 7,014 candidates in the data set. 
 
 ```{r}
-incumbency_table <- fb_ads |>
-  group_by(incumbency) |>            
-  summarize(num_candidates = cand_name_last)               
+incumbency_table <- fb_ads |> 
+  group_by(incumbency) |>
+  summarize(count = n())
 
-knitr::kable(incumbency_table, caption = "Number of Candidates by Incumbency Status")
+knitr::kable(incumbency_table,
+             col.names = c("Incumbency Staus", "Number of Candidates"),
+             digits = 0,
+             caption = "Number of Candidates by Incumbency Status")
 ```
 
 
@@ -163,9 +165,8 @@ us_house_data <- fb_ads |>
 ## Barplot 
 fb_top_plot <- ggplot(us_house_data,
                       aes(x = impressions_millions, 
-                          y = cand_name_last,
-                          fill = party)) + 
-  geom_bar(stat = "identity") + 
+                          y = cand_name_last)) + 
+  geom_bar(aes(fill = party), stat = "identity") + 
   labs(title = "Top 15 US House Candidates by Facebook Ad Impressions",
        x = "Facebook Ad Impressions (millions)",
        y = "Candidate Last Name") + 
