--- a/02_hw_data_wrangling.Rmd
+++ b/02_hw_data_wrangling.Rmd
@@ -50,11 +50,8 @@ library(readr)
 library(dplyr)
 library(knitr)
 
-fb_ads <- read.csv("data/fb_ads.csv")
-```
-There are 7,014 candidates in the data set. 
+fb_ads <- read_csv("data/fb_ads.csv")
 
-```{r}
 incumbency_table <- fb_ads |> 
   group_by(incumbency) |>
   summarize(count = n())
@@ -64,7 +61,7 @@ knitr::kable(incumbency_table,
              digits = 0,
              caption = "Number of Candidates by Incumbency Status")
 ```
-
+There are 7,014 candidates in the data set. 
 
 \newpage
 
